jEdit 5.0 version history
       (changes since jEdit 4.5)
:encoding=UTF-8:

{{{ Version 5.0pre1

Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust, Dale
Anson, Matthieu Casanova, Olivier Pisano, Jimmy Chaw, peibl and Jarek Czekalski
for contributing to this release.

{{{ Bug fixes

- Fixed rectangular selection constructor (patch #3440310) (peibl)

- When copying a file in VFSBrowser, if a file with the same name already exists
  a suffix copy-n is added to avoid deleting the existing file (#3470759)
  (Matthieu Casanova)

- Fixed Ctrl + key not working in completion popup (Matthieu Casanova)

- Large file mode text description dialog (#3456370 - Matthieu Casanova)

- Fixed copy of Hypersearch results adding \r in the clipboard (#3142456)
  (Matthieu Casanova)

- The Java based installer now correctly handles GNU style long filenames in
  the installer package and thus does not corrupt the JavaDoc files anymore
  (Bug #2327520 - Björn "Vampire" Kautler)

- Several message boxes were not being created on the EDT which would result in
  tiny, non-resizable message boxes. (Bug #3441535, Dale Anson)

- \r (0x0A, CR) could be pasted from clipboard into buffer.
  (Bug #3142456 - Matthieu Casanova)

}}}
{{{ API Changes

- New constructors for CopyFileWorker:
  CopyFileWorker(Component comp, VFSFile[] vfsFiles, String target)
  CopyFileWorker(Component comp, VFSFile[] vfsFiles, String target,
  			Behavior behavior)
  CopyFileWorker(Component comp, File[] files, String target)
  CopyFileWorker(Component comp, File[] files, String target, Behavior behavior)
  to allow copy of multiple files at the same time (Matthieu Casanova)

- New VFS.copy() methods:
  copy(ProgressObserver progress, VFS sourceVFS, Object sourceSession,
  	String sourcePath, VFS targetVFS, Object targetSession,
  	String targetPath, Component comp, boolean canStop,
  	boolean sendVFSUpdate)
  copy(ProgressObserver progress, String sourcePath,String targetPath,