@@ -581,7 +581,7 @@
 <MODE NAME="vbscript"		FILE="vbscript.xml"
 				FILE_NAME_GLOB="*.{vbs,bas,cls}" />
 
-<MODE NAME="velocity"		FILE="velocity.xml"
+<MODE NAME="velocity"		FILE="velocity_pure.xml"
 				FILE_NAME_GLOB="*.vm" />
 
 <MODE NAME="verilog"		FILE="verilog.xml"
